# TrainCpp1

./: CMakeLists.txt  README.md
include/: Box.h
src/: Box.cpp  dataKeeper.cpp  main.cpp  processor.cpp
